--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -24,6 +24,7 @@
 			</div>
 			<div class="panel-body">
 				<%= render "suggest_btns" %>
+				<div id="suggest-table-div"></div>
 				<div id="search_div" class="row schedule-search-bar">
 					<%= render "/courses/search/mini_form" %>
 					<div class="scrollable"></div>
