modify main index

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,7 @@
 				</li>
 				<!--
 				<li>
-					<a class="page-scroll" href="/user/" data-no-turbolink>算學分</a>
+					<a class="page-scroll" href="/user" data-no-turbolink>算學分</a>
 				</li>
 				-->
 				<li>
@@ -78,7 +78,7 @@
 				<% if current_user %>
 
 					<li class="dropdown" >		
-						<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown",'data-no-turbolink'=>"true" do %>
+						<%= link_to  "/user", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown",'data-no-turbolink'=>"true" do %>
 							<% if current_user.hasFb? %>
 								<%= image_tag "https://graph.facebook.com/"<<session[:auth_facebook][:uid]<<"/picture", size: "25x25" %>
 							<% end %>
