--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -22,9 +22,9 @@ td.date{
 }
 </style>
 
-<div class="bg2"></div>
-<div class="bg1"></div>
-<div class="bg3"></div>
+<div class="bg-black-blocker"></div>
+<div class="bg-image"></div>
+
 <header>
 	<div class="header-content text-left ">
 		<div class="container">
@@ -180,25 +180,22 @@ $(document).ready(function(){
 		re_win();
 	});
 	// Fit Text Plugin for Main Header
-    $("h1").fitText(
-        1.2, {
-            minFontSize: '35px',
-            maxFontSize: '65px'
-        }
-    );
-		var brief_intro =["即將畢業，給自己一個安心，<br>快登入使用算學分功能！","機會是留給有準備的人，<br>快登入使用模擬排課！","手邊有用不到的教科書嗎?<br>快登入使用二手書平台!"];
-		$("#brief-intro").html(brief_intro[Math.floor(Math.random()*3)]);
-		var aa = ['url(<%=asset_path "bg6.jpg"%>)','url(<%=asset_path "bg5.jpg"%>)','url(<%=asset_path "bg3.jpg"%>)'];
-		var t1=0;
-		setInterval(function() {
-		$('.bg1').fadeOut(6000, function() 
-		{
-				
-				$('.bg1').css('background-image', aa[++t1]).fadeIn(3000);
-				//t1++;
-				if(t1 == 3) t1 = 0;
-			});
-		},6000)
+	$("h1").fitText(1.2, {
+		minFontSize: '35px',
+		maxFontSize: '65px'
+	});
+	var brief_intro =["即將畢業，給自己一個安心，<br>快登入使用算學分功能！","機會是留給有準備的人，<br>快登入使用模擬排課！","手邊有用不到的教科書嗎?<br>快登入使用二手書平台!","想宣傳精彩的活動嗎?<br>快登入使用活動BAR!"];
+	$("#brief-intro").html(brief_intro[Math.floor(Math.random()*brief_intro.length)]);
+	var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
+	var t1=0;
+	$('.bg-image').css('background-image', bgs[t1]);
+	setInterval(function() {
+		$('.bg-image').fadeOut(3000, function(){
+			t1++;
+			if(t1 == bgs.length) t1 = 0;
+			$('.bg-image').css('background-image', bgs[t1]).fadeIn(3000);
+		});
+	},12000);
 
 });
 
