Fix the broken layout of index page at small screen (form/search bar) (Events)

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -96,30 +96,17 @@
 			<div class="container">
         <%=form_tag "/events", {class:"form-horizontal form-group center-block", role:"form", method:"GET"} do %>
 					<div class="form-button-wrapper">
-						<%=link_to "新增活動",new_event_path,class:"btn btn-info","data-no-turbolink"=>true%>
-					</div>
-					<!--
-					<div class="form-button-wrapper">	
-						<%=link_to "我的活動","/events/?mine=true",class:"btn btn-primary",style:"/*background-color:#11427D;*/"%>
-					</div>
-					-->
-					<div class="form-nav-button-wrapper">
-						<button id="myActivities" type="button" class="btn btn-success btn-block" data-toggle="toggle" aria-pressed="false" >我的活動</button>
-					</div>
-					<!--
-					<div class="form-text-wrapper">
-						<input id="form_text_input" type="activities" class="form-control" placeholder="輸入活動名稱">
+						<%=link_to "新增活動",new_event_path,class:"btn btn-info btn-block","data-no-turbolink"=>true%>
 					</div>
 					<div class="form-button-wrapper">
-						<button type="submit" class="btn btn-primary">找活動</button>
+						<button id="myActivities" type="button" class="btn btn-success btn-block" data-toggle="toggle" aria-pressed="false" >我的活動</button>
 					</div>
-					-->
 					<div class="form-text-wrapper">
 						<div class="input-group">
 							<%=text_field_tag :custom_search, params[:custom_search], class:"form-control", placeholder:"輸入活動名稱/地點/組織" %>
               <span class="input-group-btn">
 								<button type="submit" class="btn btn-primary" id="search"><i class="fa fa-search"></i></button>        
-							</span><!-- /btn-group -->
+							</span>
 						</div>
 					</div>
         <% end %>  
