--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -66,20 +66,22 @@
 	background-color: rgba(100, 100, 100, 0.7);
 }
 
+@media screen and (max-width: 768px){ 
+	.form-wrapper{
+		height: 130px;
+	}
+}
+
 .form-button-wrapper{
-	@extend .col-md-1, .col-sm-2, .col-xs-6;
+	@extend  .col-xs-6, .col-sm-2, .col-md-2;
 	padding: 3px auto;
 }
 
 .form-text-wrapper{
-	@extend .col-md-8, .col-sm-8, .col-xs-12;
+	@extend .col-xs-12, .col-sm-6, .col-md-8;
 	padding: 3px auto;
 }
 
-.form-nav-button-wrapper{
-	@extend .col-md-2, .col-sm-12, .col-xs-12;
-	padding: 3px auto;
-}
 /*------------------------
 	event-block group 
 	attributes
