--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -1,4 +1,4 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<%= javascript_include_tag "waypoints.min.js" %>
 <%= javascript_include_tag "jquery.counterup.js" %>
 <style>
 
