fix import href

--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -47,7 +47,7 @@
 	  <div class="col-sm-8">
 	  	  	<h2 count-up end-val="873.4"></h2>
 	  	  <div class="header"><h1><b>GPA 計算機</b>&nbsp;<span class="glyphicon glyphicon-object-align-left"></span></h1></div>
-		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間計算，試算前您必須確認有將最新的成績匯入，可以到 <a href="http://plus.nctu.edu.tw:3000/scores/import">這裡</a> 匯入。</p>
+		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間計算，試算前您必須確認有將最新的成績匯入，可以到 <a href="https://plus.nctu.edu.tw/scores/import">這裡</a> 匯入。</p>
 		  
 			<% @normal_scores.each do |t| %>
 			<!-- Overall 4.0 4.3 計算 -->
