--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 			<div class="note">
-			<p>註：此計算參考 <a href="https://www.google.com.tw/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0ahUKEwjWlvm_xqnLAhXCkpQKHSM7CZQQFggbMAA&url=http%3A%2F%2Faadm.nctu.edu.tw%2Fregistra%2FGetFile.aspx%3Ftype%3D1%26id%3D4f5b5677-4d4a-4787-9806-e5b05de7cbe2&usg=AFQjCNFja7uyy1smdI4z1G3bwVvH2v_hUg&sig2=bAu-L1WjagpFX9ikoHLKLQ">等級制與百分制及GP對照表-交通大學</a> 與 <a href="http://intra.tpml.edu.tw/study/upload/downloads/GPA.htm"> 美國大學四點制的算法</a>，Last 60 Credits 採由後往前計算至大於等於 60 學分為止，也就是可能超過 60 學分 (呈現於括號內)，實際成績以學校成績單為準。</p>
+			<p>註：此計算參考 <a href="https://www.google.com.tw/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0ahUKEwjWlvm_xqnLAhXCkpQKHSM7CZQQFggbMAA&url=http%3A%2F%2Faadm.nctu.edu.tw%2Fregistra%2FGetFile.aspx%3Ftype%3D1%26id%3D4f5b5677-4d4a-4787-9806-e5b05de7cbe2&usg=AFQjCNFja7uyy1smdI4z1G3bwVvH2v_hUg&sig2=bAu-L1WjagpFX9ikoHLKLQ" target="_blank">等級制與百分制及GP對照表-交通大學</a> 與 <a href="http://intra.tpml.edu.tw/study/upload/downloads/GPA.htm" target="_blank"> 美國大學四點制的算法</a>，Last 60 Credits 採由後往前計算至大於等於 60 學分為止，也就是可能超過 60 學分 (呈現於括號內)，實際成績以學校成績單為準。</p>
 			</div>
 		</div>
 		</div>
