--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -2,7 +2,7 @@
 <%= javascript_include_tag "courses/simulation", "data-turbolinks-track" => true %>
 
 <div class="row" style="">
-	<div class="col-md-5 col-md-offset-1">
+	<div class="col-md-6">
 		<div class="panel" >
 			<div class="panel-heading bg-fb">
 				<h4 class="text-center">
