--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -1,5 +1,11 @@
 <%= javascript_include_tag "user_course_stat/checker", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "courses/simulation", "data-turbolinks-track" => true %>
+<style>
+.row{
+	margin-top: 15px;	
+}
+
+</style>
 
 <div class="row" style="">
 	<div class="col-md-6">
