--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" style = "font-size: 120%"href="/">NCTU+</a>
+			<a class="navbar-brand" style = "font-size: 120%" href="/" data-no-turbolink>NCTU+</a>
 		</div>
 		
 		<!-- Collect the nav links, s, and other content for toggling -->
