--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -1,7 +1,6 @@
 <%= javascript_include_tag "waypoints.min.js" %>
 <%= javascript_include_tag "jquery.counterup.js" %>
 <style>
-
 .glyphicon{
 	font-size: 0.77em;
 }
@@ -47,7 +46,7 @@
 	  <div class="col-sm-8">
 	  	  <h2 count-up end-val="873.4"></h2>
 	  	  <div class="header"><h1><span class="glyphicon glyphicon-ok-sign"></span>&nbsp;<b>GPA 計算機</b></h1></div>
-		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間計算，試算前您必須確認有將最新的成績匯入，可以到 <a href="/scores/import">這裡</a> 匯入。</p>
+		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間手算，試算前您必須確認已將最新成績匯入，可以到 <a href="/scores/import">這裡</a> 匯入。</p>
 		  
 			<!-- Overall 4.0 4.3 計算 -->
 			<% @normal_scores.each do |t| %>
@@ -150,8 +149,6 @@
 						<button type="button" class="btn btn-warning" onClick="window.location.reload()">重新載入</button>
 					</div>
 				</div>
-				
-
 			</div>
 			<div class="note">
 			<p>註：此計算參考 <%=link_to "等級制與百分制及GP對照表-交通大學", asset_path("nctu_gpa.jpg"), target:"blank"%> 與 <a href="http://intra.tpml.edu.tw/study/upload/downloads/GPA.htm" target="_blank"> 美國大學四點制的算法</a>，Last 60 Credits 採由後往前計算至大於等於 60 學分為止，也就是可能超過 60 學分 (呈現於括號內)，實際成績以學校成績單為準。</p>
@@ -172,13 +169,10 @@ $(function(){
 
 function open_window(url, width, height) {
 	var my_window;
-
 	// screen.width means Desktop Width
 	// screen.height means Desktop Height
-
 	var center_left = (screen.width / 2) - (width / 2) + 20;
 	var center_top = (screen.height / 2) - (height / 2) - 40;
-
 	my_window = window.open(url, "Title", "scrollbars=1, width="+width+", height="+height+", left="+center_left+", top="+center_top);
 	my_window.focus();
 }
