--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -46,7 +46,7 @@
 	  <div class="col-sm-8">
 	  	  <h2 count-up end-val="873.4"></h2>
 	  	  <div class="header"><h1><span class="glyphicon glyphicon-ok-sign"></span>&nbsp;<b>GPA 計算機</b></h1></div>
-		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間手算，試算前您必須確認已將最新成績匯入，可以到 <a href="/scores/import">這裡</a> 匯入。</p>
+		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間手算，試算前您必須確認將最新的成績匯入，可以到 <a href="/scores/import">這裡</a> 匯入。</p>
 		  
 			<!-- Overall 4.0 4.3 計算 -->
 			<% @normal_scores.each do |t| %>
