--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -32,12 +32,16 @@
 	text-align: right;
 	margin-bottom: 15px;
 }
+
+.fb-like{
+   overflow: hidden !important;
+   margin-right: 7px;
+}
  </style>
 
  <!DOCTYPE html>
 <html>
 <head>
-</head>
 </head>
 <body>
 <div class="container">
@@ -47,7 +51,7 @@
 	  	  <h2 count-up end-val="873.4"></h2>
 	  	  <div class="header"><h1><span class="glyphicon glyphicon-ok-sign"></span>&nbsp;<b>GPA 計算機</b></h1></div>
 		  <p class="lead">我們提供 Overall GPA、Last 60 Credits 的成績試算，想出國或撇一眼自己 GPA 的同學們不用再跑到中正堂列印或花時間手算，試算前您必須確認將最新的成績匯入，可以到 <a href="/scores/import">這裡</a> 匯入。</p>
-		  
+
 			<!-- Overall 4.0 4.3 計算 -->
 			<% @normal_scores.each do |t| %>
 				<% if t.score.to_f >=80 && t.score.to_f <= 100 %>
@@ -126,26 +130,26 @@
 
 			<div class="row">
 				<div class="gpa1 col-sm-6">
-					<div style="background:#FAFAFA !important" class="jumbotron">
-						<p><strong>Overall 4.0</strong><p>
+					<div style="background:#FAFAFA" class="jumbotron">
+						<p><b>Overall 4.0</b><p>
 						<p><span class="counter" style = "font-size: 1.7em;"><%= (@sum/@credit).round(2) %></span></p>
 					</div>
 					<div style="background:#FAFAFA !important" class="jumbotron">
-					    <p><strong>Last 60 Credits 4.0</strong><p>
+					    <p><b>Last 60 Credits 4.0</b><p>
  						<p>&nbsp;&nbsp;<span class="counter" style = "font-size: 1.7em;"><%= (@sum60/@credit60).round(2) %></span> (<span class="counter"><%= @credit60 %></span>)</p>
 					</div>
 				</div>
 				<div class="gpa2 col-sm-6">
-					<div style="background:#FAFAFA !important" class="jumbotron">
-					    <p><strong>Overall 4.3</strong><p>
+					<div style="background:#FAFAFA" class="jumbotron">
+					    <p><b>Overall 4.3</b><p>
 						<p><span class="counter" style = "font-size: 1.7em;"><%= (@sum2/@credit).round(2) %></span></p>
 					</div>
-					<div style="background:#FAFAFA !important" class="jumbotron">
-					    <p><strong>Last 60 Credits 4.3</strong><p>
+					<div style="background:#FAFAFA" class="jumbotron">
+					    <p><b>Last 60 Credits 4.3</b><p>
  						<p>&nbsp;&nbsp;<span class="counter" style = "font-size: 1.7em;"><%= (@sum6043/@credit60).round(2) %></span> (<span class="counter"><%= @credit60 %></span>)</p>
 					</div>
 					<div class="sub_btn">
-						<%= link_to '讓朋友知道這個功能！', "javascript: open_window('https://www.facebook.com/sharer/sharer.php?u=https://plus.nctu.edu.tw/scores/gpa',650,300);", :class => "btn btn-primary", :style => "margin-right: 4px;" %>
+						<div class="fb-like" data-href="https://www.facebook.com/nctuplus/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 						<button type="button" class="btn btn-warning" onClick="window.location.reload()">重新載入</button>
 					</div>
 				</div>
@@ -159,23 +163,20 @@
 	</div>
 </body>
 
+
 <script>
-$(function(){
-	$('.counter').counterUp({
-		delay: 25,
-		time: 1100
-	});
+$('.counter').counterUp({
+    delay: 25,
+    time: 1100
 });
 
-function open_window(url, width, height) {
-	var my_window;
-	// screen.width means Desktop Width
-	// screen.height means Desktop Height
-	var center_left = (screen.width / 2) - (width / 2) + 20;
-	var center_top = (screen.height / 2) - (height / 2) - 40;
-	my_window = window.open(url, "Title", "scrollbars=1, width="+width+", height="+height+", left="+center_left+", top="+center_top);
-	my_window.focus();
-}
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.5&appId=1683611315250257";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'))
 </script>
 
 </html>
