--- a/app/views/scores/import.html.erb
+++ b/app/views/scores/import.html.erb
@@ -35,6 +35,7 @@
 		<%= hidden_field_tag "user_agreement", (current_user.agree) ? 0 : 0 %>
 		<div class = "sub_btn">
 			<%= submit_tag "立即匯入", :class=>"btn btn-primary" %>
+			<%= link_to '返回', :back, :class=>"btn btn-default" %>
 		</div>
 		<% end %>
 	</div>
