--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,12 +20,24 @@ td.date{
 .glyphicon{
 	font-size: 0.1em;
 }
+#floating_link {
+     position: fixed;
+     right: 0;
+     top: 400px;
+     display: block;
+     width: 50px;
+     height: 125px;
+     text-indent: -10000px;
+     background-image: url(/my/image.jpg);
+     overflow: hidden;
+}
 </style>
 
 <div class="bg-black-blocker"></div>
 <div class="bg-image"></div>
 
 <header>
+
 	<div class="header-content text-left ">
 		<div class="container">
 		<div class="header-content-inner ">
@@ -74,8 +86,7 @@ td.date{
 				<div class="warning"></div>
 				<div class="btn-inner"></div>								
 			</div>
-			
-			
+
 			<div class="header-right ">
 				<h2 id="brief-intro">
 				</h2>
@@ -83,14 +94,14 @@ td.date{
 				<% if !current_user %>
 					<a href="/login" class="btn btn-primary btn-xl page-scroll" style="font-size:20px;font-weight:300;margin-right:20px;" data-no-turbolink>登入</a>
 				<% end %>
-			</div>
-			
-    </div>
+			</div>	
+    	</div>
 		</div>
   </div>
 	<div class="text-center circle-bar"></div>
 </header>
-    
+
+
 <section id="intro" >
 	<div class="container">
 		<div class="row">
