--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -1,5 +1,5 @@
-<%= javascript_include_tag "waypoints.min.js" %>
-<%= javascript_include_tag "jquery.counterup.js" %>
+<%= javascript_include_tag "waypoints.min.js"=> true %>
+<%= javascript_include_tag "jquery.counterup.js" => true%>
 <style>
 .glyphicon{
 	font-size: 0.77em;
