--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag "new-index", "data-turbolinks-track" => false %>
+<%= stylesheet_link_tag "new-index", "data-turbolinks-track" => false %>
+
 <%= javascript_include_tag "waypoints.min.js" %>
 <%= javascript_include_tag "jquery.counterup.js" %>
 <style>
