--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -75,7 +75,7 @@
 					<%=link_to "課程收藏", "javascript:void(0);",class:"page-scroll", onClick:"showCart();" %>
 				</li>
 				<li>
-					<%=link_to "GPA 計算機", "https://plus.nctu.edu.tw/scores/gpa", class:"page-scroll" %>
+					<%=link_to "GPA 計算機", "/scores/gpa", class:"page-scroll" %>
 				</li>
 				
 				<% if current_user %>
