--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -38,6 +38,8 @@ td.date{
 
 <header>
 
+	<%=session[:zzz]%>
+
 	<div class="header-content text-left ">
 		<div class="container">
 		<div class="header-content-inner ">
