--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -80,12 +80,14 @@
 			<% end %>
 			</div>
 			<!-- Carousel nav -->
+			<% if not @event_banner.empty? %>
 			<a class="carousel-control left"  href="#myCarousel" data-slide="prev">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a class="carousel-control right" href="#myCarousel" data-slide="next">
 				<span class="glyphicon glyphicon-chevron-right"></span>
 			</a>
+			<% end %>
 		</div>
 	</div>
 	<!-- End of banner -->
