--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
 		<meta property="og:url"           content="<%=root_url%>" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:title"         content="NCTU+" />
-    <meta property="og:description" content="NCTU+ 交大智慧選課系統">
-		<meta property="og:image"         content="<%=asset_path('logo22.png')%>" />
+    <meta property="og:description" content="NCTU+ 交大智慧校園系統">
+
 	<% end %>
 
 	<script>
